# js/summer/src/swagger.json
@@ -376,6 +376,102 @@
 				}
 			}
 		},
+		"/payment": {
+			"get": {
+				"summary": "Get open payments",
+				"description": "Get open payments on the ERP",
+				"tags": [
+					"Payments"
+				],
+				"parameters": [
+					{
+						"name": "pageSize",
+						"in": "query",
+						"description": "The number of registries to return",
+						"required": false,
+						"schema": {
+							"type": "integer",
+							"minimum": 1
+						}
+					},
+					{
+						"name": "pageNumber",
+						"in": "query",
+						"description": "Control of pagination on search",
+						"required": false,
+						"schema": {
+							"type": "integer",
+							"minimum": 1
+						}
+					},
+					{
+						"name": "type",
+						"in": "query",
+						"description": "Filter payments by type, like NF, NCC, RA, etc.",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"name": "clientId",
+						"in": "query",
+						"description": "Filter payments by client ID",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"name": "clientStore",
+						"in": "query",
+						"description": "Filter payments by client store",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"name": "issueDate",
+						"in": "query",
+						"description": "Filter payments by issue date. (Format: YYYYMMDD)",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"name": "dueDate",
+						"in": "query",
+						"description": "Filter payments by due date. (Format: YYYYMMDD)",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "A list of open payments according to the filters parameters",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "array",
+									"items": {
+										"$ref": "#/components/schemas/Payment"
+									}
+								}
+							}
+						}
+					}
+				}
+			}
+		},
 		"/login": {
 			"post": {
 				"summary": "Login for testing",
@@ -498,6 +594,41 @@
 					},
 					"actualLimit": {
 						"type": "number"
+					}
+				}
+			},
+			"Payment": {
+				"type": "object",
+				"properties": {
+					"documentNumber":{
+						"type": "string"
+					},
+					"parcel":{
+						"type": "string"
+					},
+					"type":{
+						"type": "string"
+					},
+					"clientId":{
+						"type": "string"
+					},
+					"clientStore":{
+						"type": "string"
+					},
+					"issueDate":{
+						"type": "string"
+					},
+					"dueDate":{
+						"type": "string"
+					},
+					"balance":{
+						"type": "number"
+					},
+					"currency":{
+						"type": "string"
+					},
+					"description":{
+						"type": "string"
 					}
 				}
 			}
